# BattleShip

./: CMakeLists.txt  KodethonBattleShip  README.md  main.cpp  setup.sh
MVC/: AiPlayer.cpp  AiPlayer.h  Attack.cpp  Attack.h  AttackResult.cpp  AttackResult.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  CheatingAI.cpp  CheatingAI.h  Controller.cpp  Controller.h  EndGame.cpp  EndGame.h  GameAttributes.cpp  GameAttributes.h  HumanPlayer.cpp  HumanPlayer.h  HuntDestroyAI.cpp  HuntDestroyAI.h  Model.cpp  Model.h  Move.cpp  Move.h  Player.cpp  Player.h  PlayerConfiguration.cpp  PlayerConfiguration.h  RandomAI.cpp  RandomAI.h  ShipPlacement.cpp  ShipPlacement.h  StandardView.cpp  StandardView.h  Utility.cpp  Utility.h  View.cpp  (+1 more)
